[gd_scene load_steps=4 format=3 uid="uid://dvwsqnbrdxyv7"]

[ext_resource type="Texture2D" uid="uid://bjndtvgyfk58g" path="res://img/tempPC.png" id="1_rhlou"]
[ext_resource type="Script" path="res://player_character.gd" id="1_ufitg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mqjal"]
size = Vector2(80, 80)

[node name="PlayerCharacter" type="Area2D"]
z_index = 1
position = Vector2(133, 74)
script = ExtResource("1_ufitg")
metadata/_edit_group_ = true

[node name="PlayerSprite" type="Sprite2D" parent="."]
z_index = 1
texture = ExtResource("1_rhlou")

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_mqjal")

[node name="MovementDelay" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="FastMovementDelay" type="Timer" parent="."]
wait_time = 0.12
one_shot = true

[node name="RayCast2D" type="RayCast2D" parent="."]

[connection signal="timeout" from="MovementDelay" to="." method="_on_movement_delay_timeout"]
[connection signal="timeout" from="FastMovementDelay" to="." method="_on_fast_movement_delay_timeout"]
[connection signal="timeout" from="FastMovementDelay" to="." method="_on_movement_delay_timeout"]
